@@ -60,6 +60,7 @@ Template for new versions:
 - `suspendmanager`: stop suspending single tile stair constructions
 
 ## Misc Improvements
+- `changevein`: affect connected veins even outside of the selected map block
 
 ## Documentation
 - `installing`: add instructions for how to use Steam DFHack with non-Steam DF (for DFHack auto-updates and cloud backups)
